--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="card text-white bg-dark text-center">
                 <div class="card-header">VIP</div>
                 <div class="card-body ">
-                  <h5 class="card-title">S/.30 mensuales</h5>
+                  <h5 class="card-title">$5 mensuales</h5>
                   <p class="card-text">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">Servicio de búsqueda de componente</li>
